exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": {
        "stat": 3454,
        "gzip": 489
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "dist/bar.js": 77,
        "dist/foo.js": 120,
        "<unmapped>": 0
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 2854,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": {
        "stat": 697,
        "gzip": 489
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "dist/bar.js": 77,
        "dist/foo.js": 120,
        "<unmapped>": 0
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 97,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": {
        "stat": 697,
        "gzip": 489
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "hello/bar.js": 77,
        "hello/foo.js": 120
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "hello/bar.js": 97,
        "hello/foo.js": 137
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": {
        "stat": 697,
        "gzip": 489
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "dist/bar.js": 77,
        "dist/foo.js": 120,
        "<unmapped>": 0
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 97,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map.js",
      "totalBytes": {
        "stat": 662,
        "gzip": 369
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "dist/bar.js": 77,
        "dist/foo.js": 0,
        "<unmapped>": 0
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 62,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": {
        "stat": 3454,
        "gzip": 489
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "dist/bar.js": 77,
        "dist/foo.js": 120,
        "<unmapped>": 0
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 2854,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ],
  "errors": []
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": {
        "stat": 697,
        "gzip": 489
      },
      "unmappedBytes": {
        "stat": 0,
        "gzip": 0
      },
      "gzipFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 292,
        "dist/bar.js": 77,
        "dist/foo.js": 120,
        "<unmapped>": 0
      },
      "statFiles": {
        "node_modules/browserify/node_modules/browser-pack/_prelude.js": 463,
        "dist/bar.js": 97,
        "dist/foo.js": 137,
        "<unmapped>": 0
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
node_modules/browserify/node_modules/browser-pack/_prelude.js\t292\r
dist/foo.js\t120\r
dist/bar.js\t77\r
<unmapped>\t0\r
\r
node_modules/browserify/node_modules/browser-pack/_prelude.js\t292\r
dist/foo.js\t120\r
dist/bar.js\t77\r
<unmapped>\t0
`
